samples/_failures_safe/1761128721_c91dbd_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a1393460.c: In function ‘main’:
./samples/SAFE/__tmp_a1393460.c:130:12: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  130 |     struct Matrix mat1, mat2
      |            ^~~~~~
./samples/SAFE/__tmp_a1393460.c:130:12: error: expected declaration or statement at end of input
